Criar API de servicos externos V2
